# ark-bp-pp

./: Cargo.toml  README.md
.github/workflows/: test.yml
bp/: Cargo.toml  README.md
bp-pp/src/: transcript.rs
bp-pp/src/arithmetic_circuits/: mod.rs
bp/benches/: bulletproofs.rs
bp/src/: lib.rs  transcript.rs  util.rs
k256-tests/: Cargo.toml
k256-tests/src/: conv_print_utils.rs  lib.rs  types_conv.rs
src/: arithmetic_circuits.rs  lib.rs  transcript.rs  util.rs  wnla.rs
src/arithmetic_circuits/: commit.rs  inner_circuit.rs  mod.rs  prover.rs  readme.md  types.rs  utils.rs  variable-reference.md  verifier.rs
wip-rewrite/arithmetic_circuits/: commit.rs  readme.md  utils.rs
