[package]
name = "ark-bp-pp"
version = "0.1.0"
edition = "2024"
authors = ["Shramee <shramee.srivastav@gmail.com>"]
license = "MIT"
description = "Bulletproofs++ on Ark Algebra"
categories = ["cryptography"]
keywords = ["bulletproofs++", "crypto", "rangeproofs", "zeroknowledge", "zkp"]
readme = "README.md"

[dependencies]
merlin = "3.0.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
criterion = "0.5.1"
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-serialize = "0.5.0"
ark-bls12-381 = "0.5.0"
ark-std = "0.5.0"
