[workspace]
members = ["."]
resolver = "2"

[workspace.dependencies]
merlin = "3.0.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
criterion = "0.5.1"
ark-ff = { git = "https://github.com/arkworks-rs/algebra", rev = "a13c018816522de2411082db27e95c748c001642" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", rev = "a13c018816522de2411082db27e95c748c001642" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra", rev = "a13c018816522de2411082db27e95c748c001642" }
ark-std = { git = "https://github.com/arkworks-rs/std/", version = "0.5.0" }
ark-starkcurve = { git = "https://github.com/arkworks-rs/algebra", rev = "a13c018816522de2411082db27e95c748c001642" }
hashbrown = "0.15.4"

[package]
name = "ark-bp-pp"
version = "0.1.0"
edition = "2024"
authors = ["Shramee <shramee.srivastav@gmail.com>"]
license = "MIT"
description = "Bulletproofs++ on Ark Algebra"
categories = ["cryptography"]
keywords = ["bulletproofs++", "crypto", "rangeproofs", "zeroknowledge", "zkp"]
readme = "README.md"

[dependencies]
merlin = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
criterion = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
ark-starkcurve = { workspace = true }
hashbrown = { workspace = true }
