[package]
name = "ark-bp"
version = "0.1.0"
edition = "2024"
authors = ["Shramee <shramee.srivastav@gmail.com>"]
license = "MIT"
description = "Bulletproofs on Ark Algebra"
categories = ["cryptography"]
keywords = ["bulletproofs", "crypto", "rangeproofs", "zeroknowledge", "zkp"]

[dependencies]
merlin = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ark-ff = { workspace = true }
ark-ec = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
ark-starkcurve = { workspace = true }
hashbrown = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "bulletproofs"
harness = false
